Alterado script de data aquisition

--- a/Code/Data_Aquisition_and_Understanding/DataAquisition.ipynb
+++ b/Code/Data_Aquisition_and_Understanding/DataAquisition.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import re\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SBA_national = sc.textFile(\"/home/jovyan/work/Data/SBAnational.csv\")\n",
-    "SBA_national = SBA_national.map(lambda x: x.split(\",\"))"
+    "SBA_national = sc.textFile(\"/home/jovyan/work/Data/Raw/SBAnational.csv\")\n",
+    "#SBA_national = SBA_national.map(lambda x: x.split(\",\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "columns_name = SBA_national.first()\n",
@@ -42,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,164 +56,98 @@
     "    if isinstance(autoStr, int) :\n",
     "        return autoStr\n",
     "    \n",
-    "    # Separa cada índice pela vírgula (separador de colunas)\n",
-    "    row = autoStr.split(\",\")\n",
-    "    \n",
     "    # Transforma os nulos\n",
-    "    row = [NA if column == \"\" else column for column in row]\n",
+    "    row = [np.nan if column == \"\" else column for column in autoStr]\n",
     "    \n",
     "    # Transforma str em num\n",
-    "    row[9:17] = [int(row[i]) for i in range(9, 17)]"
+    "    row[9:17] = [int(col) for col in row[9:17]]\n",
+    "    \n",
+    "    # Limpa e transforma str em num\n",
+    "    row[21:24] = [float(re.sub(\"[\\$, \\\"]\", \"\", col)) for col in row[21:24]]\n",
+    "    row[25:30] = [float(re.sub(\"[\\$, \\\"]\", \"\", col)) for col in row[25:30]]\n",
+    "    \n",
+    "    return row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['1000014003',\n",
-       "  'ABC HOBBYCRAFT',\n",
-       "  'EVANSVILLE',\n",
-       "  'IN',\n",
-       "  '47711',\n",
-       "  'FIFTH THIRD BANK',\n",
-       "  'OH',\n",
-       "  '451120',\n",
-       "  '28-Feb-97',\n",
-       "  '1997',\n",
-       "  '84',\n",
-       "  '4',\n",
-       "  '2',\n",
-       "  '0',\n",
-       "  '0',\n",
-       "  '1',\n",
-       "  '0',\n",
-       "  'N',\n",
-       "  'Y',\n",
-       "  '',\n",
-       "  '28-Feb-99',\n",
-       "  '\"$60',\n",
-       "  '000.00 \"',\n",
-       "  '$0.00 ',\n",
-       "  'P I F',\n",
-       "  '$0.00 ',\n",
-       "  '\"$60',\n",
-       "  '000.00 \"',\n",
-       "  '\"$48',\n",
-       "  '000.00 \"'],\n",
-       " ['1000024006',\n",
-       "  'LANDMARK BAR & GRILLE (THE)',\n",
-       "  'NEW PARIS',\n",
-       "  'IN',\n",
-       "  '46526',\n",
-       "  '1ST SOURCE BANK',\n",
-       "  'IN',\n",
-       "  '722410',\n",
-       "  '28-Feb-97',\n",
-       "  '1997',\n",
-       "  '60',\n",
-       "  '2',\n",
-       "  '2',\n",
-       "  '0',\n",
-       "  '0',\n",
-       "  '1',\n",
-       "  '0',\n",
-       "  'N',\n",
-       "  'Y',\n",
-       "  '',\n",
-       "  '31-May-97',\n",
-       "  '\"$40',\n",
-       "  '000.00 \"',\n",
-       "  '$0.00 ',\n",
-       "  'P I F',\n",
-       "  '$0.00 ',\n",
-       "  '\"$40',\n",
-       "  '000.00 \"',\n",
-       "  '\"$32',\n",
-       "  '000.00 \"'],\n",
-       " ['1000034009',\n",
-       "  '\"WHITLOCK DDS',\n",
-       "  ' TODD M.\"',\n",
-       "  'BLOOMINGTON',\n",
-       "  'IN',\n",
-       "  '47401',\n",
-       "  'GRANT COUNTY STATE BANK',\n",
-       "  'IN',\n",
-       "  '621210',\n",
-       "  '28-Feb-97',\n",
-       "  '1997',\n",
-       "  '180',\n",
-       "  '7',\n",
-       "  '1',\n",
-       "  '0',\n",
-       "  '0',\n",
-       "  '1',\n",
-       "  '0',\n",
-       "  'N',\n",
-       "  'N',\n",
-       "  '',\n",
-       "  '31-Dec-97',\n",
-       "  '\"$287',\n",
-       "  '000.00 \"',\n",
-       "  '$0.00 ',\n",
-       "  'P I F',\n",
-       "  '$0.00 ',\n",
-       "  '\"$287',\n",
-       "  '000.00 \"',\n",
-       "  '\"$215',\n",
-       "  '250.00 \"']]"
+       "['1000014003,ABC HOBBYCRAFT,EVANSVILLE,IN,47711,FIFTH THIRD BANK,OH,451120,28-Feb-97,1997,84,4,2,0,0,1,0,N,Y,,28-Feb-99,\"$60,000.00 \",$0.00 ,P I F,$0.00 ,\"$60,000.00 \",\"$48,000.00 \"',\n",
+       " '1000024006,LANDMARK BAR & GRILLE (THE),NEW PARIS,IN,46526,1ST SOURCE BANK,IN,722410,28-Feb-97,1997,60,2,2,0,0,1,0,N,Y,,31-May-97,\"$40,000.00 \",$0.00 ,P I F,$0.00 ,\"$40,000.00 \",\"$32,000.00 \"',\n",
+       " '1000034009,\"WHITLOCK DDS, TODD M.\",BLOOMINGTON,IN,47401,GRANT COUNTY STATE BANK,IN,621210,28-Feb-97,1997,180,7,1,0,0,1,0,N,N,,31-Dec-97,\"$287,000.00 \",$0.00 ,P I F,$0.00 ,\"$287,000.00 \",\"$215,250.00 \"',\n",
+       " '1000044001,\"BIG BUCKS PAWN & JEWELRY, LLC\",BROKEN ARROW,OK,74012,1ST NATL BK & TR CO OF BROKEN,OK,0,28-Feb-97,1997,60,2,1,0,0,1,0,N,Y,,30-Jun-97,\"$35,000.00 \",$0.00 ,P I F,$0.00 ,\"$35,000.00 \",\"$28,000.00 \"',\n",
+       " '1000054004,\"ANASTASIA CONFECTIONS, INC.\",ORLANDO,FL,32801,FLORIDA BUS. DEVEL CORP,FL,0,28-Feb-97,1997,240,14,1,7,7,1,0,N,N,,14-May-97,\"$229,000.00 \",$0.00 ,P I F,$0.00 ,\"$229,000.00 \",\"$229,000.00 \"']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset.take(3)"
+    "dataset.take(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LoanNr_ChkDgt',\n",
+       " 'Name',\n",
+       " 'City',\n",
+       " 'State',\n",
+       " 'Zip',\n",
+       " 'Bank',\n",
+       " 'BankState',\n",
+       " 'NAICS',\n",
+       " 'ApprovalDate',\n",
+       " 'ApprovalFY',\n",
+       " 'Term',\n",
+       " 'NoEmp',\n",
+       " 'NewExist',\n",
+       " 'CreateJob',\n",
+       " 'RetainedJob',\n",
+       " 'FranchiseCode',\n",
+       " 'UrbanRural',\n",
+       " 'RevLineCr',\n",
+       " 'LowDoc',\n",
+       " 'ChgOffDate',\n",
+       " 'DisbursementDate',\n",
+       " 'DisbursementGross',\n",
+       " 'BalanceGross',\n",
+       " 'MIS_Status',\n",
+       " 'ChgOffPrinGr',\n",
+       " 'GrAppv',\n",
+       " 'SBA_Appv']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "21, 26 28"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['\"$60',\n",
-       " '000.00 \"',\n",
-       " '$0.00 ',\n",
-       " 'P I F',\n",
-       " '$0.00 ',\n",
-       " '\"$60',\n",
-       " '000.00 \"',\n",
-       " '\"$48',\n",
-       " '000.00 \"']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "['\"$60',\n",
+    "a = ['\"$60',\n",
     "  '000.00 \"',\n",
     "  '$0.00 ',\n",
-    "  'P I F',\n",
     "  '$0.00 ',\n",
     "  '\"$60',\n",
     "  '000.00 \"',\n",
@@ -220,24 +157,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-75-a55686076747>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
-     ]
+     "data": {
+      "text/plain": [
+       "'\"$6'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "re.sub()"
+    "re.sub(\"0\", \"\", )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['60', '000.00', '0.00', '0.00', '60', '000.00', '48', '000.00']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
