Alterado script de aquisition

--- a/Code/Data_Aquisition_and_Understanding/DataAquisition.ipynb
+++ b/Code/Data_Aquisition_and_Understanding/DataAquisition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "SBA_national = sc.textFile(\"/home/jovyan/work/Data/Raw/SBAnational.csv\")\n",
-    "#SBA_national = SBA_national.map(lambda x: x.split(\",\"))"
+    "SBA_national = SBA_national.map(lambda x: x.split(\",(?=([^\\\\\\\"]*\\\\\\\"[^\\\\\\\"]*\\\\\\\")*[^\\\\\\\"]*$)\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,72 +71,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1000014003,ABC HOBBYCRAFT,EVANSVILLE,IN,47711,FIFTH THIRD BANK,OH,451120,28-Feb-97,1997,84,4,2,0,0,1,0,N,Y,,28-Feb-99,\"$60,000.00 \",$0.00 ,P I F,$0.00 ,\"$60,000.00 \",\"$48,000.00 \"',\n",
-       " '1000024006,LANDMARK BAR & GRILLE (THE),NEW PARIS,IN,46526,1ST SOURCE BANK,IN,722410,28-Feb-97,1997,60,2,2,0,0,1,0,N,Y,,31-May-97,\"$40,000.00 \",$0.00 ,P I F,$0.00 ,\"$40,000.00 \",\"$32,000.00 \"',\n",
-       " '1000034009,\"WHITLOCK DDS, TODD M.\",BLOOMINGTON,IN,47401,GRANT COUNTY STATE BANK,IN,621210,28-Feb-97,1997,180,7,1,0,0,1,0,N,N,,31-Dec-97,\"$287,000.00 \",$0.00 ,P I F,$0.00 ,\"$287,000.00 \",\"$215,250.00 \"',\n",
-       " '1000044001,\"BIG BUCKS PAWN & JEWELRY, LLC\",BROKEN ARROW,OK,74012,1ST NATL BK & TR CO OF BROKEN,OK,0,28-Feb-97,1997,60,2,1,0,0,1,0,N,Y,,30-Jun-97,\"$35,000.00 \",$0.00 ,P I F,$0.00 ,\"$35,000.00 \",\"$28,000.00 \"',\n",
-       " '1000054004,\"ANASTASIA CONFECTIONS, INC.\",ORLANDO,FL,32801,FLORIDA BUS. DEVEL CORP,FL,0,28-Feb-97,1997,240,14,1,7,7,1,0,N,N,,14-May-97,\"$229,000.00 \",$0.00 ,P I F,$0.00 ,\"$229,000.00 \",\"$229,000.00 \"']"
+       "[['1000014003,ABC HOBBYCRAFT,EVANSVILLE,IN,47711,FIFTH THIRD BANK,OH,451120,28-Feb-97,1997,84,4,2,0,0,1,0,N,Y,,28-Feb-99,\"$60,000.00 \",$0.00 ,P I F,$0.00 ,\"$60,000.00 \",\"$48,000.00 \"'],\n",
+       " ['1000024006,LANDMARK BAR & GRILLE (THE),NEW PARIS,IN,46526,1ST SOURCE BANK,IN,722410,28-Feb-97,1997,60,2,2,0,0,1,0,N,Y,,31-May-97,\"$40,000.00 \",$0.00 ,P I F,$0.00 ,\"$40,000.00 \",\"$32,000.00 \"'],\n",
+       " ['1000034009,\"WHITLOCK DDS, TODD M.\",BLOOMINGTON,IN,47401,GRANT COUNTY STATE BANK,IN,621210,28-Feb-97,1997,180,7,1,0,0,1,0,N,N,,31-Dec-97,\"$287,000.00 \",$0.00 ,P I F,$0.00 ,\"$287,000.00 \",\"$215,250.00 \"'],\n",
+       " ['1000044001,\"BIG BUCKS PAWN & JEWELRY, LLC\",BROKEN ARROW,OK,74012,1ST NATL BK & TR CO OF BROKEN,OK,0,28-Feb-97,1997,60,2,1,0,0,1,0,N,Y,,30-Jun-97,\"$35,000.00 \",$0.00 ,P I F,$0.00 ,\"$35,000.00 \",\"$28,000.00 \"'],\n",
+       " ['1000054004,\"ANASTASIA CONFECTIONS, INC.\",ORLANDO,FL,32801,FLORIDA BUS. DEVEL CORP,FL,0,28-Feb-97,1997,240,14,1,7,7,1,0,N,N,,14-May-97,\"$229,000.00 \",$0.00 ,P I F,$0.00 ,\"$229,000.00 \",\"$229,000.00 \"']]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset.take(5)"
+    "dataset = dataset.map(LimpaRDD)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['LoanNr_ChkDgt',\n",
-       " 'Name',\n",
-       " 'City',\n",
-       " 'State',\n",
-       " 'Zip',\n",
-       " 'Bank',\n",
-       " 'BankState',\n",
-       " 'NAICS',\n",
-       " 'ApprovalDate',\n",
-       " 'ApprovalFY',\n",
-       " 'Term',\n",
-       " 'NoEmp',\n",
-       " 'NewExist',\n",
-       " 'CreateJob',\n",
-       " 'RetainedJob',\n",
-       " 'FranchiseCode',\n",
-       " 'UrbanRural',\n",
-       " 'RevLineCr',\n",
-       " 'LowDoc',\n",
-       " 'ChgOffDate',\n",
-       " 'DisbursementDate',\n",
-       " 'DisbursementGross',\n",
-       " 'BalanceGross',\n",
-       " 'MIS_Status',\n",
-       " 'ChgOffPrinGr',\n",
-       " 'GrAppv',\n",
-       " 'SBA_Appv']"
+       "['1000044001', '\"BIG BUCKS PAWN & JEWELRY', ' LLC\"', 'BROKEN ARROW']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "columns_name"
+    "'1000044001,\"BIG BUCKS PAWN & JEWELRY, LLC\",BROKEN ARROW'.split(',')"
    ]
   },
   {
@@ -144,16 +118,7 @@
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a = ['\"$60',\n",
-    "  '000.00 \"',\n",
-    "  '$0.00 ',\n",
-    "  '$0.00 ',\n",
-    "  '\"$60',\n",
-    "  '000.00 \"',\n",
-    "  '\"$48',\n",
-    "  '000.00 \"']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -171,9 +136,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "re.sub(\"0\", \"\", )"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
